@@ -2,4 +2,4 @@
 include aminclude.am
 
 ## Process this file with automake to produce Makefile.in
-SUBDIRS = src doc debian
+SUBDIRS = src doc debian man extra
