@@ -1,0 +1,3 @@
+man_MANS = pepper.8 
+man_aux = $(man_MANS:.1=.x)
+EXTRA_DIST = $(man_MANS)
